# MaLib2

./: CMakeLists.txt
include/: lib2.h
src/: lib2.cpp
